...
          buildPasswordFormField(context),
          SizedBox(height: getProportionateScreenHeight(30)),
          buildConformPassFormField(context),
          FormError(errors: state.errors),
          SizedBox(height: getProportionateScreenHeight(40)),
          DefaultButton(
            text: "Continue",
            press: () {
              if (_formKey.currentState!.validate()) {
                _formKey.currentState!.save();
                // if all are valid then go to success screen
//                Navigator.pushNamed(context, CompleteProfileScreen.routeName);
                context.read(signUpViewModelProvider.notifier).signUp(
...
      ),
    );
  }

  TextFormField buildConformPassFormField(BuildContext context) {
    return TextFormField(
      key: Key("sign_up_form_text_input_conform_pass"),
      controller: _passwordConformTextEditingController,
      obscureText: true,
      onChanged: (value) {
        if (value.isNotEmpty) {
          context
              .read(signUpFormViewModelProvider.notifier)
...
      ),
    );
  }

  TextFormField buildPasswordFormField(BuildContext context) {
    return TextFormField(
      key: Key("sign_up_form_text_input_password"),
      controller: _passwordTextEditingController,
      obscureText: true,
      onChanged: (value) {
        if (value.isNotEmpty) {
          context
              .read(signUpFormViewModelProvider.notifier)
...
      ),
    );
  }

  TextFormField buildEmailFormField(BuildContext context) {
    return TextFormField(
      key: Key("sign_up_form_text_input_email"),
      controller: _emailTextEditingController,
      keyboardType: TextInputType.emailAddress,
      onChanged: (value) {
        if (value.isNotEmpty) {
          context
              .read(signUpFormViewModelProvider.notifier)
...
